--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "node": ">=14.16.0"
   },
   "scripts": {
-    "build": "tsc --build",
-    "buildBROKEN": "tslint --project .\\tsconfig.json && tsc",
+    "lint": "eslint .",
+    "build": "eslint . && tsc --build",
+    "rebuild": "eslint . && tsc --build --clean && tsc --build",
     "clean": "tsc --build --clean"
   },
   "dependencies": {
@@ -26,7 +27,13 @@
     "react-dom": "16.9.0"
   },
   "devDependencies": {
+    "@microsoft/sp-webpart-base": "^1.12.1",
+    "@microsoft/sp-extension-base": "^1.12.1",
     "@types/react": "16.9.36",
-    "@types/react-dom": "16.9.8"
+    "@types/react-dom": "16.9.8",
+    "@typescript-eslint/eslint-plugin": "^4.31.0",
+    "@typescript-eslint/parser": "^4.31.0",
+    "eslint": "^7.32.0",
+    "eslint-plugin-react": "^7.25.1"
   }
 }
