--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/react": "16.9.36",
     "@types/react-dom": "16.9.8",
     "@typescript-eslint/eslint-plugin": "^4.31.0",
+    "@typescript-eslint/typescript-estree": "^4.31.0",
     "@typescript-eslint/parser": "^4.31.0",
     "eslint": "^7.32.0",
     "eslint-plugin-react": "^7.25.1"
