--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@fluentui/react": "^8.16.0",
     "@fluentui/theme": "^2.4.1",
     "@mauriora/controller-sharepoint-list": "*",
-    "@microsoft/sp-lodash-subset": "^1.12.1",
+    "@microsoft/sp-lodash-subset": "1.12.1",
     "@pnp/sp": "2.9.0",
     "@pnp/spfx-controls-react": "3.3.0",
     "class-transformer": "^0.4.0",
@@ -32,8 +32,7 @@
     "@mauriora/eslint-config-react": "*",
     "@mauriora/eslint-config-ts": "*",
     "@mauriora/spfx-packaging": "*",
-    "@microsoft/sp-extension-base": "^1.12.1",
-    "@microsoft/sp-webpart-base": "^1.12.1",
+    "@microsoft/sp-component-base": "1.12.1",
     "@types/react": "^16.14.0",
     "@types/react-dom": "^16.9.14",
     "@typescript-eslint/eslint-plugin": "^4.31.0",
