--- a/package.json
+++ b/package.json
@@ -25,16 +25,16 @@
     "mobx-react-lite": "^3.2.0"
   },
   "peerDependencies": {
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0"
+    "react": "16.9.0",
+    "react-dom": "16.9.0"
   },
   "devDependencies": {
     "@mauriora/eslint-config-react": "*",
     "@mauriora/eslint-config-ts": "*",
     "@mauriora/spfx-packaging": "*",
     "@microsoft/sp-component-base": "1.12.1",
-    "@types/react": "^16.14.0",
-    "@types/react-dom": "^16.9.14",
+    "@types/react": "16.9.36",
+    "@types/react-dom": "16.9.8",
     "@typescript-eslint/eslint-plugin": "^4.31.0",
     "@typescript-eslint/parser": "^4.31.0",
     "@typescript-eslint/typescript-estree": "^4.31.0",
