--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "@mauriora/utils-spfx-controls-react",
   "version": "0.1.0",
   "private": false,
+  "license": "MIT",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "files": [ "dist" ],
+  "files": [
+    "dist"
+  ],
   "engines": {
     "node": ">=14.16.0"
   },
@@ -22,6 +25,7 @@
     "@pnp/sp": "2.9.0",
     "@pnp/spfx-controls-react": "3.3.0",
     "class-transformer": "^0.4.0",
+    "he": "^1.2.0",
     "mobx": "^6.1.8",
     "mobx-react-lite": "^3.2.0"
   },
@@ -34,6 +38,7 @@
     "@mauriora/eslint-config-ts": "0.0.1",
     "@mauriora/spfx-packaging": "0.0.5",
     "@microsoft/sp-component-base": "1.12.1",
+    "@types/he": "^1.1.2",
     "@types/react": "16.9.36",
     "@types/react-dom": "16.9.8",
     "@types/webpack-env": "1.13.1",
