--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mauriora/utils-spfx-controls-react",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": false,
   "license": "MIT",
   "main": "dist/index.js",
@@ -20,7 +20,7 @@
   "dependencies": {
     "@fluentui/react": "^8.16.0",
     "@fluentui/theme": "^2.4.1",
-    "@mauriora/controller-sharepoint-list": "0.1.2",
+    "@mauriora/controller-sharepoint-list": "^0.1.3",
     "@microsoft/sp-lodash-subset": "1.12.1",
     "@pnp/sp": "2.9.0",
     "@pnp/spfx-controls-react": "3.3.0",
@@ -36,7 +36,7 @@
   "devDependencies": {
     "@mauriora/eslint-config-react": "0.0.1",
     "@mauriora/eslint-config-ts": "0.0.1",
-    "@mauriora/spfx-packaging": "0.0.5",
+    "@mauriora/spfx-packaging": "^0.0.6",
     "@microsoft/sp-component-base": "1.12.1",
     "@types/he": "^1.1.2",
     "@types/react": "16.9.36",
