--- a/package.json
+++ b/package.json
@@ -47,5 +47,6 @@
     "@typescript-eslint/typescript-estree": "^4.31.0",
     "eslint": "^7.32.0",
     "eslint-plugin-react": "^7.25.1"
-  }
+  },
+  "gitHead": "780ac1e738ab9168bde61511552ff8f6ac443ad5"
 }
