--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@mauriora/utils-spfx-controls-react",
   "version": "0.1.0",
-  "private": false,
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "files": [ "dist" ],
+  "files": [
+    "dist"
+  ],
   "engines": {
     "node": ">=14.16.0"
   },
@@ -32,7 +33,7 @@
   "devDependencies": {
     "@mauriora/eslint-config-react": "0.0.1",
     "@mauriora/eslint-config-ts": "0.0.1",
-    "@mauriora/spfx-packaging": "0.0.5",
+    "@mauriora/spfx-packaging": "^0.0.17",
     "@microsoft/sp-component-base": "1.12.1",
     "@types/react": "16.9.36",
     "@types/react-dom": "16.9.8",
