--- a/package.json
+++ b/package.json
@@ -1,48 +1,52 @@
 {
-  "name": "@mauriora/utils-spfx-controls-react",
-  "version": "0.2.6",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
-  "files": [
-    "dist"
-  ],
-  "engines": {
-    "node": ">=14.16.0"
-  },
-  "scripts": {
-    "lint": "eslint .",
-    "build": "eslint . && tsc --build",
-    "rebuild": "eslint . && tsc --build --clean && tsc --build",
-    "clean": "tsc --build --clean"
-  },
-  "dependencies": {
-    "@fluentui/react": "^8.69.0",
-    "@fluentui/theme": "^2.6.6",
-    "@mauriora/controller-sharepoint-list": "^0.2.6",
-    "@microsoft/sp-lodash-subset": "1.14.0",
-    "@pnp/sp": "3.3.2-v3nightly.20220601",
-    "@pnp/spfx-controls-react": "3.8.0",
-    "class-transformer": "^0.5.1",
-    "mobx": "^6.6.0",
-    "mobx-react-lite": "^3.4.0"
-  },
-  "peerDependencies": {
-    "react": "16.9.0",
-    "react-dom": "16.9.0"
-  },
-  "devDependencies": {
-    "@mauriora/eslint-config-react": "0.0.1",
-    "@mauriora/eslint-config-ts": "0.0.1",
-    "@mauriora/spfx-packaging": "^0.2.4",
-    "@microsoft/sp-component-base": "1.14.0",
-    "@types/react": "16.9.36",
-    "@types/react-dom": "16.9.16",
-    "@types/webpack-env": "1.17.0",
-    "@typescript-eslint/eslint-plugin": "^5.27.0",
-    "@typescript-eslint/parser": "^5.27.0",
-    "@typescript-eslint/typescript-estree": "^5.27.0",
-    "eslint": "^7.32.0",
-    "eslint-plugin-react": "^7.30.0",
-    "typescript": "~4.5.5"
-  }
+    "name": "@mauriora/utils-spfx-controls-react",
+    "version": "0.2.6",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/mauriora/Utils-SPFx-Controls-React.git"
+    },
+    "main": "dist/index.js",
+    "types": "dist/index.d.ts",
+    "files": [
+        "dist"
+    ],
+    "engines": {
+        "node": ">=14.16.0"
+    },
+    "scripts": {
+        "lint": "eslint .",
+        "build": "eslint . && tsc --build",
+        "rebuild": "eslint . && tsc --build --clean && tsc --build",
+        "clean": "tsc --build --clean"
+    },
+    "dependencies": {
+        "@fluentui/react": "^8.69.0",
+        "@fluentui/theme": "^2.6.6",
+        "@mauriora/controller-sharepoint-list": "^0.2.6",
+        "@microsoft/sp-lodash-subset": "1.14.0",
+        "@pnp/sp": "3.3.2-v3nightly.20220601",
+        "@pnp/spfx-controls-react": "3.8.0",
+        "class-transformer": "^0.5.1",
+        "mobx": "^6.6.0",
+        "mobx-react-lite": "^3.4.0"
+    },
+    "peerDependencies": {
+        "react": "16.9.0",
+        "react-dom": "16.9.0"
+    },
+    "devDependencies": {
+        "@mauriora/eslint-config-react": "0.0.1",
+        "@mauriora/eslint-config-ts": "0.0.1",
+        "@mauriora/spfx-packaging": "^0.2.4",
+        "@microsoft/sp-component-base": "1.14.0",
+        "@types/react": "16.9.36",
+        "@types/react-dom": "16.9.16",
+        "@types/webpack-env": "1.17.0",
+        "@typescript-eslint/eslint-plugin": "^5.27.0",
+        "@typescript-eslint/parser": "^5.27.0",
+        "@typescript-eslint/typescript-estree": "^5.27.0",
+        "eslint": "^7.32.0",
+        "eslint-plugin-react": "^7.30.0",
+        "typescript": "~4.5.5"
+    }
 }
